fixed css spacing

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -93,7 +93,6 @@ body {
   background-color: var(--background);
 }
 
-
 /*---------------------------------------------------------------------------*/
 /*--------------------------------Header-------------------------------------*/
 /*---------------------------------------------------------------------------*/
@@ -137,7 +136,6 @@ header {
       place-content: center;
       backdrop-filter: brightness(90%);
       
-
       h2 {
           font-family:"Poppins", serif;
           font-size: 7rem;
@@ -147,7 +145,6 @@ header {
           line-height: 1.2;
           margin-bottom: 8px;
           letter-spacing: 3px; 
-          
       }
 
       p {
@@ -168,7 +165,6 @@ header {
 /*------------------------------Down Arrow ----------------------------------*/
 /*---------------------------------------------------------------------------*/
 /* I followed a tutorial on cssanimation.rocks for the header-down-arrow*/
-
 
 .header-down-arrow {
   position: absolute;
@@ -220,13 +216,11 @@ header {
 
 .content {
     width: 60%;
-
     h3 {
         font-size: 3.5rem;
         color: #fff;
         line-height: 1.2;
     }
-
     p {
         font-size: 1.7rem;
     }
@@ -244,7 +238,6 @@ h3 {
 /*---------------------------------------------------------------------------*/
 /*----------------------------About-Me Section ------------------------------*/
 /*---------------------------------------------------------------------------*/
-
 
 .about-me .container {
   flex-direction: row;
@@ -303,10 +296,10 @@ a {
   }
 }
 
-
 /*---------------------------------------------------------------------------*/
 /*-----------------------------Past Projects---------------------------------*/
 /*---------------------------------------------------------------------------*/
+
 .column {
   flex: 1 1 calc(25% - 40px); 
   width: calc(25% - 15px); 
@@ -318,15 +311,13 @@ a {
   box-shadow: 1px 1px 2px rgb (0 0 0 / 5%);
   text-align: center;
   margin-bottom: 50px;
-}
-
-
-.column img {
-  width: 100%; 
-  height: 100%; 
-  object-fit: cover;
-  border-radius: var(--border-radius);
-}
+  img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover;
+    border-radius: var(--border-radius);
+  }
+}  
 
 .project-text {
   color: #fff; 
